update: id & class selector

--- a/07_CSS_Selectors/app.css
+++ b/07_CSS_Selectors/app.css
@@ -1,12 +1,31 @@
-* {
+/* * {
 	color: pink;
 	background-color: cyan;
+} */
+
+body {
+	background-color: #f1faee;
 }
 
 button {
 	font-size: 30px;
+	background-color: #a8dadc;
 }
 
 h1, h2 {
-	color: darkslateblue;
+	color: #1d3557;
+}
+
+#signup {
+	color: #f1faee;
+	background-color: #457b9d;
+}
+
+span {
+	color: #457b9d;
+}
+
+.tag {
+	background-color: #e63946;
+	color: #f1faee;
 }
