ad順位-カスケード、詳細度

--- a/07_CSS_Selectors/app.css
+++ b/07_CSS_Selectors/app.css
@@ -15,8 +15,7 @@ button {
 }
 
 /* タイプセレクタ (全ての<h1>と<h2>に適用) */
-h1,
-h2 {
+h1, h2 {
 	color: #1d3557;
 }
 
@@ -61,17 +60,17 @@ footer>a {
 input[type="text"] {
 	width: 300px;
 	background-color: antiquewhite;
-	color: maroon;
 	/* テキストボックスの中に入力される文字の色 */
+	color: maroon;
 }
 
+/* hrefにgoogleを含むanchor */
 a[href*="google"] {
-	/* hrefにgoogleを含むanchor */
 	font-size: 25px;
 }
 
+/* hrefが.jpで終わる<a> */
 a[href$=".jp"] {
-	/* hrefが.jpで終わる<a> */
 	font-size: 30px;
 }
 
@@ -85,8 +84,8 @@ a[href$=".jp"] {
 	background-color: lightcoral;
 }
 
+/* ボタンを押した時に色を変える */
 .post button:active {
-	/* ボタンを押した時に色を変える */
 	background-color: #5c1ee1;
 }
 
@@ -106,8 +105,8 @@ input[type="radio"]:checked {
 	box-shadow: 0 0 0 3px lawngreen;
 }
 
+/* n番目の要素。(2n-1)で奇数番目の要素を選択 */
 .post:nth-of-type(2n) {
-	/* 2nは偶数番目の要素を選択 */
 	background-color: #87a77c;
 }
 
@@ -127,12 +126,30 @@ p::first-line {
 	background-color: sandybrown;
 }
 
-/* 全てのリンクの前に"🔗"を入れる */
+/* 全てのリンクの前にcontentの文字列を入れる */
 a::before {
 	content: "🔗";
 }
 
-/* footerに属するリンクの後に"👉Go！！"を入れる */
+/* footerに属するリンクの後にcontentの文字列を入れる */
 footer a::after {
 	content: "👉Go！！";
+}
+
+/* 詳細度の高いセレクタの方が優先される */
+button:hover {
+	/* 下記はLogInボタンにだけ適用され、+VoteとSignUpには無効
+	適用されない場合は競合が起きており、他の詳細度の高いセレクタが優先されている
+	（SignUpボタンにはidセレクタ、+Voteボタンにはクラスセレクタがあるため） */
+	background-color: olivedrab; 
+	/* ただし下記は競合が起きていないので全てのボタンに適用される */
+	font-size: 10px;
+}
+/* 詳細度の格付けルール
+(A)ID >(B)クラス/属性/擬似クラス >(C)要素/疑似要素 (>ユニバーサルセレクタ)
+A > B > C 上位グループが1つでもあれば下位が100個でも敵わない
+a < nav a < .post < .post a < .post span a < .post.tag < #signup /*
+/* 下記は .post button < .post h2 + buttonで+Voteにはこちらが優先適用される */
+.post h2 + button:hover {
+	background-color: olivedrab;
 }
